--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -12,6 +12,11 @@ spring:
     username: root
     password: ${mysql-pw}
 
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -22,4 +27,4 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect        # mysql 방언
     open-in-view: false
 
-filePath: C:\nestnetFile\
+file-path:
