--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ group = 'team-kiim'
 version = '0.0.1-SNAPSHOT'
 
 java {
-    sourceCompatibility = '21'
+    sourceCompatibility = '17'
 }
 
 configurations {
@@ -25,10 +25,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'      //jackson이 지연로딩 프록시 객체에 대한 처리를 못해서 넣은 코드
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'
+    //jackson이 지연로딩 프록시 객체에 대한 처리를 못해서 넣은 코드
+//    implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'	// swagger-ui
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'    // swagger-ui
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 //    implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'com.auth0:java-jwt:4.4.0'
@@ -42,10 +43,12 @@ dependencies {
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.security:spring-security-test'
+//    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.mockito:mockito-core:5.7.0'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+compileJava { options.compilerArgs << '-parameters' }
