--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ springdoc:
 logging:
   level:
     org.hibernate.SQL: debug    # 하이버네이트가 생성하는 sql 로그로 출력
-    org.hibernate.orm.jdbc.bind: debug    # 쿼리 파라미터 로그 남김
+    org.hibernate.orm.jdbc.bind: trace    # 쿼리 파라미터 로그 남김
 
 ---
 spring:
