--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
 //    implementation 'com.auth0:java-jwt:4.4.0'
 
     implementation 'com.google.guava:guava:11.0.2'
+    implementation 'org.springframework.security:spring-security-crypto'
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
