--- a/build.gradle
+++ b/build.gradle
@@ -28,11 +28,8 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-hibernate5-jakarta'      //jackson이 지연로딩 프록시 객체에 대한 처리를 못해서 넣은 코드
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'	// swagger-ui
-//    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
-//    implementation 'io.jsonwebtoken:jjwt:0.9.1'
-//    implementation 'com.auth0:java-jwt:4.4.0'
-
-    implementation 'org.springframework.security:spring-security-crypto'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'			// SMTP
+    implementation 'org.springframework.security:spring-security-crypto'        // 비밀번호 암호화
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
