--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -32,4 +32,4 @@ spring:
         dialect: org.hibernate.dialect.MySQL8Dialect        # mysql 방언
     open-in-view: false
 
-file-path:
+file-path: C:\coffeeChatFile\
