Feat: 사용자 pk 암호화 #64 - 사용자 닉네임(ex. koffeechat)으로 사용자의 암호화된 pk를 받는다. - 암호화된 pk로 사용자 정보에 접근이 가능하다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
       mail.smtp.auth: true        # SMTP 서버와의 인증
       mail.smtp.ssl.enable: true  # SSL 보안연결(필수)
 
+  aes:
+    secret: ${aes-secret-key}  # pk AES 암호화
+
 jwt:
   secret-key: ${secret-key}
   access:
