Refactor : file-path 환경변수로 수정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -39,8 +39,9 @@ spring:
 logging:
   level:
     org.hibernate.SQL: debug    # 하이버네이트가 생성하는 sql 로그로 출력
-    org.hibernate.orm.jdbc.bind: trace    # 쿼리 파라미터 로그 남김
+    org.hibernate.orm.jdbc.bind: debug    # 쿼리 파라미터 로그 남김
     org.springframework.data.mongodb.core: info
 #    org.mongodb.driver: debug
 
-file-path: C:\coffeeChatFile\
+file-path: 'C:\coffeeChatFile'
+basic-profile-image-url: 'PROFILE\basic_profile_image.png'
