Chore : 환경변수명 변경

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,7 +9,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: ${SPRING_DATASOURCE_URL}
-    username: root
+    username: ${SPRING_DATASOURCE_USERNAME}
     password: ${SPRING_DATASOURCE_PASSWORD}
 
   data:
@@ -42,4 +42,3 @@ logging:
 #    org.springframework.data.mongodb.core: info
 #    org.mongodb.driver: debug
 
-file-path: ${FILE_PATH}
