Chore : 배포 환경 구축

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -42,3 +42,5 @@ logging:
 #    org.springframework.data.mongodb.core: info
 #    org.mongodb.driver: debug
 
+file-path: 'C:\coffeeChatFile'
+basic-profile-image-url: 'PROFILE\basic_profile_image.png'
