Fix : X-Forwarded-For 헤더 추가

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -39,5 +39,8 @@ logging:
     org.mongodb.driver: off
     root: debug
 
+server:
+  forward-headers-strategy: framework
+
 file-path: ${FILE_PATH}
 basic-profile-image-url: ${BASIC_PROFILE_IMAGE_URL}
