chore : 디폴트 로깅 레벨 info 설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -38,7 +38,7 @@ logging:
     org.hibernate.orm.jdbc.bind: info    # 쿼리 파라미터 로그 남김
     org.springframework.data.mongodb.core: off
     org.mongodb.driver: off
-    root: debug
+    root: info
 
 server:
   forward-headers-strategy: framework
