--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -35,7 +35,7 @@ spring:
 logging:
   level:
     org.hibernate.SQL: info    # 하이버네이트가 생성하는 sql 로그로 출력
-    org.hibernate.orm.jdbc.bind: info    # 쿼리 파라미터 로그 남김
+    org.hibernate.orm.jdbc.bind: off    # 쿼리 파라미터 로그 남김
     org.springframework.data.mongodb.core: off
     org.mongodb.driver: off
     root: info
