refactor : 하이버네이트 로그 레벨 조정

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -38,8 +38,8 @@ spring:
 logging:
   level:
     org.hibernate.SQL: info    # 하이버네이트가 생성하는 sql 로그로 출력
-    org.hibernate.orm.jdbc.bind: info    # 쿼리 파라미터 로그 남김
-    org.springframework.data.mongodb.core: info
+    org.hibernate.orm.jdbc.bind: off    # 쿼리 파라미터 로그 남김
+    org.springframework.data.mongodb.core: off
 #    org.mongodb.driver: debug
 
 file-path: 'C:\coffeeChatFile'
