--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
@@ -34,6 +34,8 @@ dependencies {
     implementation 'org.springframework.security:spring-security-crypto'                    // 비밀번호 암호화
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'       // aws 의존성
     implementation 'org.springframework.retry:spring-retry:1.2.5.RELEASE'                   // retry 의존성
+    implementation 'org.redisson:redisson-spring-boot-starter:3.38.1'                       // redisson
+    implementation 'org.springframework.boot:spring-boot-starter-aop'                       // aop
 
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
     runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
